# pjk-pager-rust

./: .gitignore  Cargo.toml  README.md
pager-auth/: Cargo.toml  Dockerfile  sqlx-data.json
pager-auth/migrations/: 20230611220944_key_value.sql  20230618224501_users.sql
pager-auth/src/: db.rs  handlers.rs  main.rs  params.rs
pager-client/: Cargo.toml
pager-client/src/: main.rs
pager-server/: Cargo.toml  Dockerfile  sqlite.db  sqlite.db-shm  sqlite.db-wal  sqlx-data.json
pager-server/migrations/: 20230611032241_init_migration.sql
pager-server/src/: db.rs  handlers.rs  main.rs
pager-web/: package.json  vite.config.ts
pager-web/src/: main.tsx  utils.ts
pager-web/src-tauri/: Cargo.toml  tauri.conf.json
pager-web/src-tauri/src/: main.rs
pager-web/src/pages/: Home.tsx  Login.tsx  index.ts
pager-web/src/pages/components/: GroupCard.tsx
pager-ws/: Cargo.toml  Dockerfile
pager-ws/src/: main.rs
