[package]
name = "pager-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["headers"] }
axum-macros = "0.3.7"
cookie = "0.17.0"
http = "0.2.9"
rand = "0.8.5"
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.164", features = ["derive"]}
serde_json = "1.0.96"
sqlx = { version = "0.6.1", features = ["runtime-tokio-native-tls", "sqlite", "macros", "offline"] }
tokio = { version = "1.28.2", features = ["full"] }
tower-cookies = "0.9.0"
