[package]
name = "pager-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execute = "0.2.12"
futures = "0.3.28"
futures-util = "0.3.28"
reqwest = {version = "0.11.18", features = ["json"]}
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = {version = "1.28.2", features = ["full"]}
tokio-tungstenite = "0.19.0"
url = "2.4.0"
