[package]
name = "pager-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.18", features = ["headers"] }
http = "0.2.9"
reqwest = "0.11.18"
serde = {version = "1.0.164", features = ["derive"]}
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.28.2", features = ["full"] }
